Fixed resume link

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 							    simulation developed in Python</li>
 						    </ul>
 						    <ul class="actions">
-							<li><a href="sanchagrins_resume_2017.pdf" class="button alt">Resume</a></li>
+							<li><a href="sanchagrins_resume_2017_web.pdf" class="button alt">Resume</a></li>
 						    </ul>
 						</div>
 					</section>
