Removed contact me....

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						   experience includes developing flexible hydrodynamic inundation models in Python, statistical analysis of
 						   spatial phenomena and reserach design.</p>
 						<ul class="actions">
-							<li><a href="#contact" class="button special">Contact</a></li>
+							<li><a href="sanchagrins_resume_2017_web.pdf" class="button special">Resume</a></li>
 						</ul>
 					</section>
 				</div>
@@ -65,9 +65,6 @@
 						        <li>Developed complex geospatial models of coastal processes.</li>
 						        <li>Analyzed model spatial resolution using a custom Monte Carlo
 							    simulation developed in Python</li>
-						    </ul>
-						    <ul class="actions">
-							<li><a href="sanchagrins_resume_2017_web.pdf" class="button alt">Resume</a></li>
 						    </ul>
 						</div>
 					</section>
@@ -96,7 +93,7 @@
 					<h2 style="color:#534d77">Selected Projects</h3>
 					<div class="spotlight">
 						<div class="image">
-							<img src="images/SlackInvite.png" alt="" />
+							<a href="https://github.com/sanchagrins/SlackInvite"><img src="images/SlackInvite.png" alt="Django Slack Invite" /></a>
 						</div>
 						<div class="content">
 							<h3>
@@ -119,10 +116,12 @@
 					</div>
 					<div class="spotlight">
 						<div class="image">
-							<img src="images/CSResumeBot.png" alt="CS Resume Bot" />
+							<a href="https://github.com/sanchagrins/CSResumeBot"><img src="images/CSResumeBot.png" alt="CS Resume Bot"/></a>
 						</div>
 						<div class="content">
-							<h3>CSReusme Bot</h3>
+							<h3>
+                                                        	<a href="https://github.com/sanchagrins/CSResumeBot"><i class="fa fa-github" aria-hidden="true"></i></a>
+								CSReusme Bot</h3>
 							<p>Python/Tesseract/MongoDB
 							<ul>
 								<li>Reddit bot scrapes a popular Computer Science sub-reddit for resumes.</li>
@@ -135,38 +134,6 @@
 				</div>
 			</section>
 
-		<!-- Contact -->
-			<section id="contact" class="wrapper">
-				<div class="inner split">
-					<section>
-						<h2>Get in touch</h2>
-						<form action="#" class="alt" method="POST">
-							<div class="row uniform">
-								<div class="6u 12u$(xsmall)">
-									<input name="name" placeholder="Name" type="text">
-								</div>
-								<div class="6u$ 12u$(xsmall)">
-									<input name="email" placeholder="Email" type="email">
-								</div>
-								<div class="12u$">
-									<textarea name="message" placeholder="Message" rows="4"></textarea>
- 								</div>
- 							</div>
- 							<ul class="actions">
- 								<li><input class="alt" value="Send message" type="submit"></li>
- 							</ul>
- 						</form>
-					</section>
-					<section>
-						<ul class="contact">
-							<li class="fa-github"><a href="https://github.com/sanchagrins">github.com/sanchagrins</a></li>
-							<li class="fa-linkedin-square"><a href="https://linkedin.com/in/sanchagrins">linkedin.com/sanchagrins</a></li>
-							<li class="fa-envelope"><a href="#">sanchagrins@gmail.com</a></li>
-							<li class="fa-home">Kanagawa, Japan</li>
-						</ul>
-					</section>
-				</div>
-			</section>
 
 		<!-- Footer -->
 			<footer id="footer">
