Updated banner text

--- a/index.html
+++ b/index.html
@@ -36,9 +36,7 @@
 						<h3 style="color:#fff">Software Engineer<h3>
 					</section>
 					<section>
-						<p>Relocating back stateside in Spring 2018 after living outside of Tokyo, Japan for the last 3 years. Relevant
-						   experience includes developing flexible hydrodynamic inundation models in Python, statistical analysis of
-						   spatial phenomena and reserach design.</p>
+						<p>Language agnostic full stack developer looking for new opportunities in Austin TX. Relevant experiences include deploying full stack web applications, application development, and scripting for task automation and data preparation.</p>
 						<ul class="actions">
 							<li><a href="sanchagrins_resume_2017_web.pdf" class="button special">Resume</a></li>
 						</ul>
