--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					<section>
 						<p>Language agnostic full stack developer looking for new opportunities in Austin TX. Relevant experiences include deploying full stack web applications, application development, and scripting for task automation and data preparation.</p>
 						<ul class="actions">
-							<li><a href="sanchagrins_resume_2017_web.pdf" class="button special">Resume</a></li>
+							<li><a href="sanchagrins_resume_2018.pdf" class="button special">Resume</a></li>
 						</ul>
 					</section>
 				</div>
