Updated worked experience; Skills

--- a/index.html
+++ b/index.html
@@ -50,19 +50,18 @@
 					<section>
 						<h2 style="color:#534d77">Experience</h2>
 						<div style="margin:0 0 0 1cm">
-						    <h3>Dewberry, LLC</h3><p>Geospatial Analysit | Aug 2013 - Sep 2014</p>
+						    <h3>Dewberry, LLC</h3><p>Geospatial Analysit (Python/Agile) | Aug 2013 - Sep 2014</p>
 						    <ul>
-						       <li>Utilized Python and spatial statistical software to create flexible hydrodynamic inundation models to aid in 
-							   analysis of coastal hazards and sea-level rise.</li>
-						       <li>Significantly decreased overall model runtime by automating tasks with scripting.</li>
-						       <li>Personally developed and delivered a spatial analytics project valued at $150k on time and under budget.</li>
+						       <li>Restructured company hydrodynamic inundation model process by incorporating Python and spatial statistical libraries.</li>
+						       <li>Delivered high value projects ($150k+) on time and under budget.</li>
+						       <li>Published map services to cloud based hosting platforms.</li>
 						    </ul>
 
-						    <h3>Renaissance Computing Institute @ ECU</h3><p>Geospatial Analyst | May 2008 - Jun 2012</p>
+						    <h3>Renaissance Computing Institute @ ECU</h3><p>Geospatial Analyst (Python) | May 2008 - Jun 2012</p>
 						    <ul>
-						        <li>Developed complex geospatial models of coastal processes.</li>
-						        <li>Analyzed model spatial resolution using a custom Monte Carlo
-							    simulation developed in Python</li>
+						        <li>Developed complex geospatial models with Python and spatial statistical software of coastal processes.</li>
+						        <li>Analyzed model spatial resolution using a Monte Carlo simulation.</li>
+						        <li>Web development (HTML, CSS, JS).</li>
 						    </ul>
 						</div>
 					</section>
@@ -71,14 +70,17 @@
 						<div style="margin:0 0 0 1cm">
 						    <h3>Proficient</h3>
 						    <ul class="checklist">
-							<li>Java, Python, Git</li>
-							<li>Django, HTML, CSS</li>
+							<li>Java, Python, Go</li>
+							<li>Git, Maven, JUnit</li>
+							<li>React, Node, Django,</li>
+							<li>Heroku, HTML, CSS</li>
 							<li>Bootstrap, JSON, LaTex</li>
+							<li>Linux</li>
 						    </ul>
 						    <h3>Familiar</h3>
 						    <ul class="checklist">
-							<li>C, JavaScript, PostgreSQL </li>
-							<li>MongoDB, Maven, Heroku</li>
+							<li>C++, MariaDB </li>
+							<li>MongoDB, AWS</li>
 						    </ul>
 						</div>
 					</section>
